test/2-errors/uns-2exp64.ploy
18446744073709551616 # 2^64.
